Circle CI setup

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,34 @@ jobs:
   build:
     working_directory: ~/edustor-pdfgen
     docker:
+      - image: python:3.6
+    steps:
+      - checkout
+      - run: |
+          apt update
+          apt install -y libqrencode-dev
+      - run: |
+          pip3 install -r requirements.txt
+          pip3 install -r test-requirements.txt
+      - run: |
+          pytest
+      - store_artifacts:
+          path: ~/edustor-pdfgen/test_results
+          destination: edustor-pdfgen-test-results
+      - run:
+          name: Trigger deploy
+          command: |
+                if [ "${CIRCLE_BRANCH}" == "master" ]; then
+                  curl -u ${CIRCLE_API_TOKEN}: \
+                    -d build_parameters[CIRCLE_JOB]=deploy_swarm \
+                    https://circleci.com/api/v1.1/project/github/$CIRCLE_PROJECT_USERNAME/$CIRCLE_PROJECT_REPONAME/tree/$CIRCLE_BRANCH
+                fi
+  deploy_swarm:
+    branches:
+      only:
+        - master
+    working_directory: ~/edustor-pdfgen
+    docker:
       - image: docker:git
     environment:
       IMAGE_NAME: quay.io/edustor/pdfgen
@@ -10,8 +38,6 @@ jobs:
       SWARM_CERT_URL: https://wutiarn.keybase.pub/swarm/cert.pem
     steps:
       - checkout
-      - restore_cache:
-          key: edustor-pdfgen-{{ .Revision }}
       - setup_remote_docker
       - run:
           name: Build docker image
@@ -22,21 +48,17 @@ jobs:
       - run:
           name: Push docker image
           command: |
+            docker push $IMAGE_NAME:latest
             docker push $IMAGE_NAME:ci-$CIRCLE_BUILD_NUM
-            if [ "${CIRCLE_BRANCH}" == "master" ]; then
-              docker push $IMAGE_NAME:latest
-            fi
-#      - run:
-#          name: Deploy to swarm
-#          command: |
-#            if [ "${CIRCLE_BRANCH}" == "master" ]; then
-#              mkdir -p /root/.docker
-#              curl -sSL $SWARM_CA_URL > /root/.docker/ca.pem
-#              curl -sSL $SWARM_CERT_URL > /root/.docker/cert.pem
-#              echo ${SWARM_KEY} | base64 -d > /root/.docker/key.pem
-#              export DOCKER_HOST=swarm.wutiarn.ru:2376
-#              export DOCKER_TLS_VERIFY=1
-#              docker --tlsverify --tlscacert /root/.docker/ca.pem \
-#                --tlscert /root/.docker/cert.pem --tlskey /root/.docker/key.pem \
-#                service update --with-registry-auth --image $IMAGE_NAME:ci-$CIRCLE_BUILD_NUM sw0_edustor-pdfgen
-#            fi
+      - run:
+          name: Deploy to swarm
+          command: |
+            mkdir -p /root/.docker
+            curl -sSL $SWARM_CA_URL > /root/.docker/ca.pem
+            curl -sSL $SWARM_CERT_URL > /root/.docker/cert.pem
+            echo ${SWARM_KEY} | base64 -d > /root/.docker/key.pem
+            export DOCKER_HOST=swarm.wutiarn.ru:2376
+            export DOCKER_TLS_VERIFY=1
+            docker --tlsverify --tlscacert /root/.docker/ca.pem \
+              --tlscert /root/.docker/cert.pem --tlskey /root/.docker/key.pem \
+              service update --with-registry-auth --image $IMAGE_NAME:ci-$CIRCLE_BUILD_NUM sw0_edustor-pdfgen
