--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,10 @@ jobs:
       - store_artifacts:
           path: ~/edustor-pdfgen/test_results
           destination: edustor-pdfgen-test-results
+      - save_cache:
+          key: edustor-pdfgen-{{ checksum "requirements.txt" }}
+          paths:
+            - /usr/lib/python3
       - run:
           name: Trigger deploy
           command: |
