--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,32 +41,33 @@ jobs:
     docker:
       - image: docker:git
     environment:
+      TERM: dumb
       IMAGE_NAME: quay.io/edustor/pdfgen
       SWARM_CA_URL: https://wutiarn.keybase.pub/swarm/ca.pem
       SWARM_CERT_URL: https://wutiarn.keybase.pub/swarm/cert.pem
+      DOCKER_HOST: swarm.wutiarn.ru:2376
+      DOCKER_TLS_VERIFY: 1
+      DOCKER_CERT_PATH: /root/.docker
     steps:
       - checkout
-      - setup_remote_docker
       - run:
-          name: Build docker image
-          command: |
-            docker login -u="edustor+ci" -p="$REGISTRY_PASSWORD" quay.io
-            docker build -t $IMAGE_NAME:ci-$CIRCLE_BUILD_NUM  .
-            docker tag $IMAGE_NAME:ci-$CIRCLE_BUILD_NUM $IMAGE_NAME:latest
-      - run:
-          name: Push docker image
-          command: |
-            docker push $IMAGE_NAME:latest
-            docker push $IMAGE_NAME:ci-$CIRCLE_BUILD_NUM
-      - run:
-          name: Deploy to swarm
+          name: Setup remote docker
           command: |
             mkdir -p /root/.docker
             curl -sSL $SWARM_CA_URL > /root/.docker/ca.pem
             curl -sSL $SWARM_CERT_URL > /root/.docker/cert.pem
             echo ${SWARM_KEY} | base64 -d > /root/.docker/key.pem
-            export DOCKER_HOST=swarm.wutiarn.ru:2376
-            export DOCKER_TLS_VERIFY=1
-            docker --tlsverify --tlscacert /root/.docker/ca.pem \
-              --tlscert /root/.docker/cert.pem --tlskey /root/.docker/key.pem \
-              service update --with-registry-auth --image $IMAGE_NAME:ci-$CIRCLE_BUILD_NUM sw0_edustor-pdfgen
+      - run:
+          name: Build docker image
+          command: |
+            docker login -u="edustor+ci" -p="$REGISTRY_PASSWORD" quay.io
+            docker build -t $IMAGE_NAME:ci-$CIRCLE_BUILD_NUM . | cat
+            docker tag $IMAGE_NAME:ci-$CIRCLE_BUILD_NUM $IMAGE_NAME:latest
+      - run:
+          name: Push docker image
+          command: |
+            docker push $IMAGE_NAME:latest | cat
+            docker push $IMAGE_NAME:ci-$CIRCLE_BUILD_NUM | cat
+      - run:
+          name: Deploy to swarm
+          command: docker service update --with-registry-auth --image $IMAGE_NAME:ci-$CIRCLE_BUILD_NUM sw0_edustor-pdfgen
